Correct chroma key for overlays, better contrast on videowall scores.

--- a/boxxy/videowall/css/videoscores.css
+++ b/boxxy/videowall/css/videoscores.css
@@ -14,7 +14,7 @@ body {
 }
 
 #scoreboard tr:nth-child(even) {
-    background-color: #eee;
+    background-color: #d6d6d6;
 }
 #scoreboard {
     width: 100%;
